Fix display error on mobile

--- a/css/trainer/account/editPaymentPlan.css
+++ b/css/trainer/account/editPaymentPlan.css
@@ -95,16 +95,7 @@ input:focus {
 .tier-info {
     margin-top: 1rem;
     text-align: center;
-}
-
-.tier-info p {
-    font-size: 90%;
-    font-style: normal;
-    margin-top: 1rem;
-}
-
-.tier-info i {
-    color: #395b64;
+    height: auto;
 }
 
 textarea {
